mirt 0.4.2
----------------------------------------------------------------

* item probability functions now only permit permissible values, and models may converge even when
  the log-likelihood decreases during estimation. In the EM if the model does not have a strictly 
  increasing log-likelihood then a warning message will be printed

* removed infit and outfit statistics since they only are applicable to Rasch models (and are available in
  the eRm package for those interested in Rasch modelling)

* read.mirt() re-added into the package to allow for translating estimated models into a format
  usable by the plink package

* test standard error added to plot() generic using type = 'SE', and expected score plot added 
  to itemplot() using type = 'score'

* weighted likelihood estimation (WLE) factor scores now available (without standard errors)

* removed the allpars option to coef() generics and only return a named list with the (possibly 
  rotated) item and group coefficients

* information functions slightly positively biased due to logistic constant adjustment, 
  fixed for all models. Also, information functions are now available for almost all item response models
  (mcm items missing)

* constant (D) used in estimating logistic functions can now be modified (default is still 1.702)

* partcomp models recently broken, fixed now

* more than one parameter can now be passed to parprior to make specifying identical priors more 
  convenient 

----------------------------------------------------------------
mirt 0.4.1
----------------------------------------------------------------

* relative efficiency plots added to itemplot(). Works directly for multipleGroup analysis
  and for comparing different item types (e.g., 1PL vs 2PL) can be wrapped into a named list

* infit and outfit statistics added to personfit() and itemfit()

* empirical reliability printed for each dimension when fscores(..., fulldata = FALSE) called
